Add admin APIs to consent management API (#1142)
* Add admin APIs to consent management API

* Fix review comments

* Remove self-service APIs

* Remove incorrect responses from body

* Fix review comments

* Add upperbound to limit

* Bump version

* Remove stale consts

* Remove minimum expiry time logic

* Fix review comments