@@ -34,26 +34,30 @@ import org.wso2.carbon.consent.mgt.core.model.PurposeVersion;
 import org.wso2.carbon.consent.mgt.core.model.Receipt;
 import org.wso2.carbon.consent.mgt.core.model.ReceiptInput;
 import org.wso2.carbon.consent.mgt.core.model.ReceiptService;
+import org.wso2.carbon.consent.mgt.core.model.ReceiptUpdateInput;
 import org.wso2.carbon.consent.mgt.core.util.ConsentReceiptUtils;
+import org.wso2.carbon.consent.mgt.core.util.FilterQueriesUtil;
 import org.wso2.carbon.context.PrivilegedCarbonContext;
 import org.wso2.carbon.identity.api.server.consent.management.common.ConsentManagementConstants;
-import org.wso2.carbon.identity.api.server.consent.management.v2.model.AuthorizationCreateRequest;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.AuthorizationDTO;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.AuthorizationEntry;
+import org.wso2.carbon.identity.api.server.consent.management.v2.model.AuthorizationUpdateEntry;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentCreateRequest;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentDTO;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentListResponse;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentPurposeBinding;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentResponseDTO;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentSummaryDTO;
+import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentUpdateRequest;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentValidateResponse;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentedElementDTO;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ConsentedPurposeDTO;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.ElementTerminationInfo;
 import org.wso2.carbon.identity.api.server.consent.management.v2.model.PaginationLink;
 import org.wso2.carbon.identity.api.server.consent.management.v2.util.ConsentMgtEndpointUtil;
+import org.wso2.carbon.identity.core.model.ExpressionNode;
+import org.wso2.carbon.identity.core.util.IdentityUtil;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.sql.Timestamp;
@@ -61,13 +65,10 @@ import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
-
-import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ACTIVE_STATE;
 import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.DEFAULT_LIMIT;
-import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ErrorMessages.ERROR_CODE_CONSENT_INVALID_STATE_FOR_AUTHORIZE;
 import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ErrorMessages.ERROR_CODE_CONSENT_REJECTED_WITH_AUTHORIZATIONS;
-import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ErrorMessages.ERROR_CODE_CONSENT_USER_NOT_IN_AUTHORIZATION_LIST;
 import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ErrorMessages.ERROR_CODE_ELEMENT_UUID_NOT_FOUND;
+import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ErrorMessages.ERROR_CODE_INVALID_FILTER_EXPRESSION;
 import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.ErrorMessages.ERROR_CODE_INVALID_QUERY_PARAM;
 import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.FilterConstants;
 import static org.wso2.carbon.consent.mgt.core.constant.ConsentConstants.PENDING_STATE;
@@ -107,9 +108,7 @@ public class ConsentManagementService {
 
     private ConsentResponseDTO createConsentInternal(ConsentCreateRequest request) throws ConsentManagementException {
 
-        PrivilegedCarbonContext carbonContext = PrivilegedCarbonContext.getThreadLocalCarbonContext();
-        String currentUser = carbonContext.getUsername();
-        String subjectId = StringUtils.isNotBlank(request.getSubjectId()) ? request.getSubjectId() : currentUser;
+        String subjectId = request.getSubjectId();
         boolean hasAuthorizations = request.getAuthorizations() != null && !request.getAuthorizations().isEmpty();
         boolean rejected = ConsentCreateRequest.StateEnum.REJECTED.equals(request.getState());
         if (rejected && hasAuthorizations) {
@@ -124,14 +123,6 @@ public class ConsentManagementService {
         responseDTO.setLanguage(addReceiptResponse.getLanguage());
         responseDTO.setSubjectId(addReceiptResponse.getPiiPrincipalId());
         responseDTO.setTenantDomain(addReceiptResponse.getTenantDomain());
-        boolean hasPendingAuth = request.getAuthorizations() != null && !request.getAuthorizations().isEmpty();
-        if (hasPendingAuth) {
-            responseDTO.setState(ConsentResponseDTO.StateEnum.PENDING);
-        } else if (ConsentCreateRequest.StateEnum.REJECTED.equals(request.getState())) {
-            responseDTO.setState(ConsentResponseDTO.StateEnum.REJECTED);
-        } else {
-            responseDTO.setState(ConsentResponseDTO.StateEnum.ACTIVE);
-        }
         return responseDTO;
     }
 
@@ -146,11 +137,6 @@ public class ConsentManagementService {
 
         try {
             Receipt receipt = consentManager.getReceiptWithExtendedSchema(receiptId);
-            // Lazy expiry on GET — validate status and re-fetch if state changed
-            String latestState = consentManager.validateConsentStatus(receiptId);
-            if (!latestState.equals(receipt.getState())) {
-                receipt = consentManager.getReceiptWithExtendedSchema(receiptId);
-            }
             return toConsentDTO(receipt);
         } catch (ConsentManagementException e) {
             throw ConsentMgtEndpointUtil.handleConsentManagementException(e);
@@ -169,21 +155,22 @@ public class ConsentManagementService {
      * @param after            Cursor for pagination (results after this cursor).
      * @param before           Cursor for pagination (results before this cursor).
      * @return Response with list of ConsentSummaryDTOs.
-     * @throws ConsentManagementException if listing fails.
      */
     public ConsentListResponse listConsents(String subjectId, String serviceId, String state, String purposeId,
-                                            String purposeVersionId, Integer limit, String after, String before) {
+                                            String purposeVersionId, String filter, Integer limit,
+                                            String after, String before) {
 
         try {
-            return listConsentsInternal(subjectId, serviceId, state, purposeId, purposeVersionId, limit, after, before);
+            return listConsentsInternal(subjectId, serviceId, state, purposeId, purposeVersionId, filter, limit,
+                    after, before);
         } catch (ConsentManagementException e) {
             throw ConsentMgtEndpointUtil.handleConsentManagementException(e);
         }
     }
 
     private ConsentListResponse listConsentsInternal(String subjectId, String serviceId, String state,
-                                                     String purposeId, String purposeVersionId, Integer limit,
-                                                     String after, String before)
+                                                     String purposeId, String purposeVersionId, String filter,
+                                                     Integer limit, String after, String before)
             throws ConsentManagementException {
 
         limit = validatedLimit(limit);
@@ -193,13 +180,25 @@ public class ConsentManagementService {
                     "Both 'before' and 'after' parameters are provided.");
         }
 
+        List<ExpressionNode> expressionNodes = FilterQueriesUtil.getExpressionNodes(filter, after, before);
+        for (ExpressionNode node : expressionNodes) {
+            String attr = node.getAttributeValue();
+            if (FilterConstants.FILTER_ATTR_AFTER.equals(attr) || FilterConstants.FILTER_ATTR_BEFORE.equals(attr)) {
+                continue;
+            }
+            if (attr == null || !attr.startsWith("properties.") || attr.length() <= "properties.".length()) {
+                throw handleClientException(ERROR_CODE_INVALID_FILTER_EXPRESSION,
+                        "Only 'properties.<key>' attributes are supported in consent filter. Got: " + attr);
+            }
+            String op = node.getOperation() != null ? node.getOperation().toLowerCase() : "";
+            if (!("eq".equals(op) || "sw".equals(op) || "co".equals(op) || "ew".equals(op))) {
+                throw handleClientException(ERROR_CODE_INVALID_FILTER_EXPRESSION,
+                        "Only 'eq', 'sw', 'co', and 'ew' operations are supported for consent property filter.");
+            }
+        }
+
         List<Receipt> receipts = consentManager.listReceipts(
-                subjectId,
-                serviceId,
-                state,
-                purposeId != null ? purposeId.toString() : null,
-                purposeVersionId != null ? purposeVersionId.toString() : null,
-                after, before, limit + 1);
+                subjectId, serviceId, state, purposeId, purposeVersionId, expressionNodes, limit + 1);
 
         ConsentListResponse result = new ConsentListResponse();
         List<PaginationLink> links = new ArrayList<>();
@@ -212,24 +211,23 @@ public class ConsentManagementService {
             boolean isLastPage = !hasMoreItems && (StringUtils.isNotBlank(after) || StringUtils.isBlank(before));
 
             String url = "?limit=" + limit;
-            try {
-                if (StringUtils.isNotBlank(subjectId)) {
-                    url += "&subjectId=" + URLEncoder.encode(subjectId, StandardCharsets.UTF_8.name());
-                }
-                if (StringUtils.isNotBlank(serviceId)) {
-                    url += "&serviceId=" + URLEncoder.encode(serviceId, StandardCharsets.UTF_8.name());
-                }
-                if (StringUtils.isNotBlank(state)) {
-                    url += "&state=" + URLEncoder.encode(state, StandardCharsets.UTF_8.name());
-                }
-            } catch (UnsupportedEncodingException e) {
-                LOG.debug("Server encountered an error while building pagination URL for the response.", e);
+            if (StringUtils.isNotBlank(subjectId)) {
+                url += "&subjectId=" + URLEncoder.encode(subjectId, StandardCharsets.UTF_8);
+            }
+            if (StringUtils.isNotBlank(serviceId)) {
+                url += "&serviceId=" + URLEncoder.encode(serviceId, StandardCharsets.UTF_8);
+            }
+            if (StringUtils.isNotBlank(state)) {
+                url += "&state=" + URLEncoder.encode(state, StandardCharsets.UTF_8);
             }
             if (purposeId != null) {
                 url += "&purposeId=" + purposeId;
             }
             if (purposeVersionId != null) {
                 url += "&purposeVersionId=" + purposeVersionId;
+            }
+            if (StringUtils.isNotBlank(filter)) {
+                url += "&filter=" + URLEncoder.encode(filter, StandardCharsets.UTF_8);
             }
 
             if (hasMoreItems) {
@@ -275,15 +273,56 @@ public class ConsentManagementService {
 
         try {
             Receipt receipt = consentManager.getReceiptWithExtendedSchema(receiptId);
-            String currentState = StringUtils.isNotBlank(receipt.getState()) ? receipt.getState() : ACTIVE_STATE;
-            if (REVOKE_STATE.equals(currentState)) {
-                return;
-            }
-            String callingUser = PrivilegedCarbonContext.getThreadLocalCarbonContext().getUsername();
-            consentManager.authorizeConsent(receiptId, callingUser, REVOKE_STATE);
+            consentManager.authorizeConsent(receiptId, receipt.getPiiPrincipalId(), REVOKE_STATE);
         } catch (ConsentManagementException e) {
             throw ConsentMgtEndpointUtil.handleConsentManagementException(e);
         }
+    }
+
+    /**
+     * Admin update of an existing consent's expiryTime, properties, and/or authorizations.
+     *
+     * @param consentId Consent receipt ID.
+     * @param request   Update request (all fields optional).
+     * @return Updated ConsentDTO.
+     */
+    public ConsentDTO updateConsent(String consentId, ConsentUpdateRequest request) {
+
+        try {
+            return updateConsentInternal(consentId, request);
+        } catch (ConsentManagementException e) {
+            throw ConsentMgtEndpointUtil.handleConsentManagementException(e);
+        }
+    }
+
+    private ConsentDTO updateConsentInternal(String consentId, ConsentUpdateRequest request)
+            throws ConsentManagementException {
+
+        ReceiptUpdateInput updateInput = new ReceiptUpdateInput();
+        updateInput.setConsentReceiptId(consentId);
+
+        if (request.getExpiryTime() != null) {
+            updateInput.setExpiryTime(new Timestamp(request.getExpiryTime()));
+        }
+
+        updateInput.setProperties(request.getProperties());
+
+        if (request.getAuthorizations() != null) {
+            List<ConsentAuthorization> authorizations = new ArrayList<>();
+            for (AuthorizationUpdateEntry entry : request.getAuthorizations()) {
+                ConsentAuthorization auth = new ConsentAuthorization();
+                auth.setUserId(entry.getUserId());
+                auth.setType(entry.getType());
+                if (entry.getState() != null) {
+                    auth.setStatus(ConsentAuthorization.AuthorizationStatus.valueOf(entry.getState().toString()));
+                }
+                authorizations.add(auth);
+            }
+            updateInput.setAuthorizations(authorizations);
+        }
+
+        consentManager.updateConsent(updateInput);
+        return toConsentDTO(consentManager.getReceiptWithExtendedSchema(consentId));
     }
 
     private ReceiptInput buildReceiptInput(ConsentCreateRequest request, String subjectId)
@@ -312,15 +351,18 @@ public class ConsentManagementService {
         String tenantDomain = PrivilegedCarbonContext.getThreadLocalCarbonContext().getTenantDomain();
         Long expiryMillis = request.getExpiryTime();
         Timestamp expiryTime = expiryMillis != null ? new Timestamp(expiryMillis) : null;
-        List<String> authorizationUserIds = null;
+        List<ConsentAuthorization> authorizations = null;
         if (request.getAuthorizations() != null) {
-            authorizationUserIds = new ArrayList<>();
+            authorizations = new ArrayList<>();
             for (AuthorizationEntry entry : request.getAuthorizations()) {
-                authorizationUserIds.add(entry.getId());
+                ConsentAuthorization auth = new ConsentAuthorization();
+                auth.setUserId(entry.getUserId());
+                auth.setType(entry.getType());
+                authorizations.add(auth);
             }
         }
-        return ConsentReceiptUtils.buildReceiptInput(request.getLanguage(), subjectId, tenantDomain,
-                expiryTime, rejected, authorizationUserIds, request.getProperties(),
+        return ConsentReceiptUtils.buildReceiptInput(request.getLanguage(), subjectId,
+                tenantDomain, expiryTime, rejected, authorizations, request.getProperties(),
                 request.getServiceId(), purposeBindings, consentManager);
     }
 
@@ -331,8 +373,7 @@ public class ConsentManagementService {
         dto.setTimestamp(receipt.getConsentTimestamp());
         dto.setLanguage(receipt.getLanguage());
         dto.setSubjectId(receipt.getPiiPrincipalId());
-        String state = StringUtils.isNotBlank(receipt.getState()) ? receipt.getState() : ACTIVE_STATE;
-        dto.setState(ConsentDTO.StateEnum.fromValue(state));
+        dto.setState(ConsentDTO.StateEnum.fromValue(receipt.getState()));
         dto.setExpiryTime(receipt.getExpiryTime() != null ? receipt.getExpiryTime().getTime() : null);
 
         // Extract service name and purposes from the first service entry (V2 is single-service).
@@ -386,7 +427,6 @@ public class ConsentManagementService {
         ConsentedPurposeDTO dto = new ConsentedPurposeDTO();
         dto.setName(consentPurpose.getPurpose());
 
-        // Resolve purpose int ID to UUID, and populate version label using the fetched purpose.
         String versionUuid = consentPurpose.getPurposeVersionId();
         try {
             Purpose purpose = consentManager.getPurposeByUuid(consentPurpose.getUuid());
@@ -418,7 +458,7 @@ public class ConsentManagementService {
             }
         } catch (ConsentManagementException e) {
             if (LOG.isDebugEnabled()) {
-                LOG.debug("Could not resolve purpose UUID for purposeId: " + consentPurpose.getPurposeId(), e);
+                LOG.debug("Could not resolve purpose UUID: " + consentPurpose.getUuid(), e);
             }
         }
 
@@ -428,21 +468,20 @@ public class ConsentManagementService {
                 ConsentedElementDTO elementDTO = new ConsentedElementDTO();
                 elementDTO.setName(piiCategoryValidity.getName());
                 elementDTO.setDisplayName(piiCategoryValidity.getDisplayName());
-                // Resolve element int ID to UUID.
                 try {
-                    PIICategory element = consentManager.getPIICategoryByUuid(piiCategoryValidity.getUuid());
-                    if (element == null) {
+                    PIICategory piiCategory = consentManager.getPIICategoryByUuid(piiCategoryValidity.getUuid());
+                    if (piiCategory == null) {
                         if (LOG.isDebugEnabled()) {
                             LOG.debug("Could not resolve element UUID for elementId: " + piiCategoryValidity.getUuid());
                         }
                     } else {
-                        if (StringUtils.isNotBlank(element.getUuid())) {
-                            elementDTO.setId(element.getUuid());
+                        if (StringUtils.isNotBlank(piiCategory.getUuid())) {
+                            elementDTO.setId(piiCategory.getUuid());
                         }
                     }
                 } catch (ConsentManagementException e) {
                     if (LOG.isDebugEnabled()) {
-                        LOG.debug("Could not resolve element UUID for elementId: " + piiCategoryValidity.getId(), e);
+                        LOG.debug("Could not resolve element UUID: " + piiCategoryValidity.getUuid(), e);
                     }
                 }
                 elementDTOs.add(elementDTO);
@@ -450,53 +489,6 @@ public class ConsentManagementService {
         }
         dto.setElements(elementDTOs);
         return dto;
-    }
-
-    /**
-     * Authorizes (approves/rejects) a consent receipt.
-     *
-     * @param consentId Consent receipt ID.
-     * @param request   Authorization create request.
-     * @return Response with AuthorizationDTO.
-     * @throws ConsentManagementException if authorization fails.
-     */
-    public AuthorizationDTO authorizeConsent(String consentId, AuthorizationCreateRequest request) {
-
-        try {
-            Receipt receipt = consentManager.getReceiptWithExtendedSchema(consentId);
-            String currentState = StringUtils.isNotBlank(receipt.getState()) ? receipt.getState() : ACTIVE_STATE;
-            if (!PENDING_STATE.equals(currentState)) {
-                throw handleClientException(ERROR_CODE_CONSENT_INVALID_STATE_FOR_AUTHORIZE, consentId);
-            }
-
-            PrivilegedCarbonContext carbonContext = PrivilegedCarbonContext.getThreadLocalCarbonContext();
-            String callingUser = carbonContext.getUsername();
-            String authStatus = request.getState() != null ? request.getState().toString() : "APPROVED";
-
-            List<ConsentAuthorization> existing = consentManager.getConsentAuthorizations(consentId);
-            boolean callingUserInList = existing.stream().anyMatch(a -> callingUser.equals(a.getUserId()));
-            if (!callingUserInList) {
-                throw handleClientException(ERROR_CODE_CONSENT_USER_NOT_IN_AUTHORIZATION_LIST, callingUser);
-            }
-
-            consentManager.authorizeConsent(consentId, callingUser, authStatus);
-
-            List<ConsentAuthorization> all = consentManager.getConsentAuthorizations(consentId);
-            ConsentAuthorization updated = all.stream()
-                    .filter(a -> callingUser.equals(a.getUserId()))
-                    .findFirst()
-                    .orElse(null);
-
-            AuthorizationDTO dto = new AuthorizationDTO();
-            dto.setUserId(callingUser);
-            if (updated != null) {
-                dto.setState(AuthorizationDTO.StateEnum.fromValue(updated.getStatus().name()));
-                dto.setUpdatedTime(updated.getUpdatedTime());
-            }
-            return dto;
-        } catch (ConsentManagementException e) {
-            throw ConsentMgtEndpointUtil.handleConsentManagementException(e);
-        }
     }
 
     /**
@@ -509,16 +501,13 @@ public class ConsentManagementService {
     public ConsentValidateResponse validateConsent(String consentId) {
 
         try {
+            Receipt receipt = consentManager.getReceiptWithExtendedSchema(consentId);
             String status = consentManager.validateConsentStatus(consentId);
 
             ConsentValidateResponse validateResponse = new ConsentValidateResponse();
             validateResponse.setState(ConsentValidateResponse.StateEnum.fromValue(status));
-
-            Receipt receipt = consentManager.getReceiptWithExtendedSchema(consentId);
-            if (receipt != null) {
-                validateResponse.setExpiryTime(
-                        receipt.getExpiryTime() != null ? receipt.getExpiryTime().getTime() : null);
-            }
+            validateResponse.setExpiryTime(
+                    receipt.getExpiryTime() != null ? receipt.getExpiryTime().getTime() : null);
             return validateResponse;
         } catch (ConsentManagementException e) {
             throw ConsentMgtEndpointUtil.handleConsentManagementException(e);
@@ -530,8 +519,7 @@ public class ConsentManagementService {
         ConsentSummaryDTO dto = new ConsentSummaryDTO();
         dto.setId(receipt.getConsentReceiptId());
         dto.setSubjectId(receipt.getPiiPrincipalId());
-        String state = StringUtils.isNotBlank(receipt.getState()) ? receipt.getState() : ACTIVE_STATE;
-        dto.setState(ConsentSummaryDTO.StateEnum.fromValue(state));
+        dto.setState(ConsentSummaryDTO.StateEnum.fromValue(receipt.getState()));
         dto.setTimestamp(receipt.getConsentTimestamp());
         dto.setExpiryTime(receipt.getExpiryTime() != null ? receipt.getExpiryTime().getTime() : null);
         if (receipt.getServices() != null && !receipt.getServices().isEmpty()) {
@@ -546,6 +534,14 @@ public class ConsentManagementService {
         if (limit <= 0) {
             throw handleClientException(ERROR_CODE_INVALID_QUERY_PARAM, limit.toString());
         }
+        int maximumItemPerPage = IdentityUtil.getMaximumItemPerPage();
+        if (limit > maximumItemPerPage) {
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Given limit exceeds the maximum limit. Therefore the configured maximum limit: "
+                        + maximumItemPerPage + " is set as the limit.");
+            }
+            return maximumItemPerPage;
+        }
         return limit;
     }
 
@@ -556,4 +552,5 @@ public class ConsentManagementService {
                         ConsentManagementConstants.CONSENTS_PATH + url).toString())
                 .rel(rel);
     }
+
 }
